--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,25 @@
 plugins {
   alias(libs.plugins.android.application)
+  alias(libs.plugins.kotlin.android)
 }
 
 android {
   namespace 'io.github.lzghzr.biliveinvisible'
-  compileSdk 34
+  compileSdk 35
 
   defaultConfig {
     applicationId "io.github.lzghzr.biliveinvisible"
     minSdk 27
-    targetSdk 34
-    versionCode 2
-    versionName "1.0.1"
+    targetSdk 35
+    versionCode 3
+    versionName "1.0.2"
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+    ndk {
+      abiFilters "arm64-v8a"
+    }
+
   }
 
   buildTypes {
@@ -23,8 +29,8 @@ android {
     }
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
   }
   android.applicationVariants.configureEach { variant ->
     variant.outputs.configureEach {
@@ -35,4 +41,5 @@ android {
 
 dependencies {
   compileOnly 'de.robv.android.xposed:api:82'
+  implementation 'org.luckypray:dexkit:2.0.3'
 }
