--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:value="@string/xposed_description" />
     <meta-data
         android:name="xposedminversion"
-        android:value="54" />
+        android:value="93" />
+    <meta-data
+        android:name="xposedsharedprefs"
+        android:value="true" />
     <meta-data
         android:name="xposedscope"
         android:resource="@array/xposed_scope" />
